Correction du css, qui rendait les labels invisibles

--- a/web/assets/css/main2.css
+++ b/web/assets/css/main2.css
@@ -223,10 +223,6 @@ h1 {
     padding: 20vh 0 10vh;
 }
 
-label {
-    display: none;
-}
-
 #wizardalley_publicationbundle_add_small_publication_content {
     border-radius: 0px;
 }
